--- a/blues.css
+++ b/blues.css
@@ -164,6 +164,12 @@ a:active {
 	list-style-type: square;
 }
 
+#content-sub-1 ul.plain {
+	padding: 0px 0px 0px 10px;
+	margin: 0px 0px 0px 5px;
+	list-style-type:none;
+}
+
 
 /* --- right column ---------- */
 
@@ -183,6 +189,12 @@ a:active {
 	padding: 0px 0px 0px 10px;
 	margin: 0px 0px 0px 5px;
 	list-style-type: square;
+}
+
+#content-sub-2 ul.plain {
+	padding: 0px 0px 0px 10px;
+	margin: 0px 0px 0px 5px;
+	list-style-type:none;
 }
 
 
@@ -215,8 +227,8 @@ a:active {
 	padding-right: 5px;
 	}
 
-#content-main span.versenum{
-	vertical-align: text-top;
+#content-main span.versenum {
+	vertical-align:text-top;
 	font-size: x-small;
 	margin: 0px 3px 0px 10px;
 	font-weight: bold;
@@ -225,9 +237,11 @@ a:active {
 #content-main .verse {
 	margin: 0px 0px 5px 0px;
 	padding: 0px 5px 0px 5px;
+	vertical-align:text-top;
 }
 
 #content-main .currentverse {
+	vertical-align:text-top;
 	margin: 0px 0px 5px 0px;
 	background-color: #eeeeee;
 	border: 1px dotted #dddddd;
@@ -239,7 +253,7 @@ a:active {
 }
 
 #content-main *[dir=rtl] {
-	font-family:code2000,code2001,arial unicode ms,arial, sans serif;
+	font-family:code2000,code2001,arial unicode ms,arial,sans serif,serif;
 	font-size:larger;
 }
 
@@ -250,9 +264,9 @@ a:active {
 	width:100%;
 }
 
-#paralleldisplay th {
+#paralleldisplay tr th {
 	font-weight:bold;
-	font-size:smaller;
+	font-size:small;
 }
 
 #paralleldisplay td {
