--- a/blues.css
+++ b/blues.css
@@ -165,6 +165,12 @@ a:active {
 }
 
 #content-sub-1 ul.plain {
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
+	list-style-type:none;
+}
+
+#content-sub-1 ul.plain ul {
 	padding: 0px 0px 0px 10px;
 	margin: 0px 0px 0px 5px;
 	list-style-type:none;
@@ -192,8 +198,8 @@ a:active {
 }
 
 #content-sub-2 ul.plain {
-	padding: 0px 0px 0px 10px;
-	margin: 0px 0px 0px 5px;
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
 	list-style-type:none;
 }
 
