--- a/wash.css
+++ b/wash.css
@@ -69,7 +69,7 @@ background: #C5D6EA;
 
 h2{
 margin: 12px 0px 3px 0px;
-padding: 5px 0px 3px 0px;
+padding: 5px 0em 3px .5em;
 font-family: palatino, georgia, serif;
 font-size: 1.4em;
 }
@@ -87,14 +87,14 @@ border-top: 1px solid #ccc;
 width:12em;
 float:left;
 margin: 0px 1em 0px 0px;
-padding: 0px 2px 20px 0px;
+padding: 0px 0.5em 20px 0px;
 border-right: 1px solid #ccc;
 }
 
 #content-sub-2{
 width:14em;
 float:right;
-margin: 0px 0px 0px 10px;
+margin: 0px 0px 0px 0px;
 padding: 0px 0 20px 1em;
 border-left: 1px solid #ccc;
 }
@@ -114,7 +114,6 @@ border-top: 1px solid #ccc;
 
 /* ****** Individual Sections ****** */
 
-
 /* Quick Search */
 
 #quicksearch {
@@ -133,7 +132,7 @@ padding: 3px;
 
 /* External Links */
 
- #externallinks{
+#externallinks{
 padding: 0 1px 1px;
 margin-left: 0;
 }
@@ -205,10 +204,119 @@ color:#f00;
 }
 
 
+/*   Translations   */
+
+#translations {
+margin: 0px -0.5em 0px 0px;
+padding: 0px 0 0px 0px;
+}
+
+#translations ul, #translations li {
+list-style-type: none;
+}
+
+
+#translations ul {
+background: #E8EBF0;
+text-indent: 0em;
+padding: 0px;
+margin: 0px 0px 10px 0px;
+}
+
+#translations li{
+list-style: none;
+margin: 0;
+border-top: 1px solid #ccc;
+text-align: left;
+border-bottom: 1px solid #E8EBF0;
+}
+
+#translations li a{
+display: block;
+padding: 0.25em 0.5em 0.25em 0.75em;
+background: #E8EBF0;
+text-decoration: none;
+}
+
+#translations li a:link { color: #000; }
+#externallinks li a:visited { color: #000; }
+
+#translations li a:hover{
+border-color: #8EABCD;
+color: #f00;
+background: #C5D6EA;
+}
+
+#translations p {
+background: #C5D6EA;
+margin: 0px 0px 0px 0px;
+padding: 2px 0.5em 2px 0.5em;
+text-align: center;
+font-size: 1.1em;
+border-top: 2px solid #ccc;
+}
+
+#translations hr {display:none;}
+
+/*   commentaries   */
+
+#commentaries {
+margin: 0px 0px 0px -1em;
+padding: 0px 0px 0px 0px;
+}
+
+#commentaries ul, #commentaries li {
+list-style-type: none;
+}
+
+#commentaries ul {
+background: #E8EBF0;
+text-indent: 0em;
+padding: 0px;
+margin: 0px 0px 10px 0px;
+}
+
+#commentaries li{
+list-style: none;
+margin: 0;
+border-top: 1px solid #ccc;
+text-align: left;
+border-bottom: 1px solid #E8EBF0;
+}
+
+#commentaries li a{
+display: block;
+padding: 0.25em 0.5em 0.25em 0.75em;
+background: #E8EBF0;
+text-decoration: none;
+}
+
+#commentaries li a:link { color: #000; }
+#externallinks li a:visited { color: #000; }
+
+#commentaries li a:hover{
+border-color: #8EABCD;
+color: #f00;
+background: #C5D6EA;
+}
+
+#commentaries p {
+background: #C5D6EA;
+margin: 0px 0px 0px 0px;
+padding: 2px 0.5em 2px 0.5em;
+text-align: center;
+font-size: 1.1em;
+border-top: 2px solid #ccc;
+}
+
+#commentaries hr {display:none;}
+
+
 /*   Search Results   */
 
 #searchresults {
-margin: 0px 14em 0px 11em;
+margin: 0px 14em 0px 11.5em;
+padding: 0 0 0px 0;
 }
 
 #searchresults dt {
@@ -272,6 +380,65 @@ color:#000;
 color:#f00;
 }
 
+
+/* Passage */
+
+#passage{
+font-family:  Verdana, Arial, Helvetica, Sans-Serif;
+font-size: 1em;
+line-height: 1.4em;
+margin: 0px 14em 0px 11.5em;
+padding: 0 0 0px 0;
+}
+
+#passage div{
+padding: 0px 0.5em 0px 0px;
+}
+
+#passage span.versenum{
+	font-size: 0.7 em;
+	padding: 0px 3px 0px 10px;
+	font-weight: bold;
+}
+
+#passage span.versenum a {
+	text-decoration: none;
+	color:navy;
+}
+
+#passage span.versenum a:hover {
+	text-decoration: underline;
+	color:#ff0000;
+}
+
+div.currentverse {
+	background-color: #eee;
+}
+
+#passage  ul {
+background: #eee;
+border-top: 1px solid #ccc;
+border-bottom: 1px solid #ccc;
+margin: 0px 0px 5px 0px;
+padding: 0px 0px 0px 0px;
+text-indent: 0px;
+}
+
+#passage  ul li {
+display: inline;
+list-style-type: none;
+line-height: 2em;
+font-size: 1em;
+margin: 0px 1.1em 0px 0px;
+}
+
+#passage  ul li a {
+color:#000;
+}
+
+#passage  ul li a:hover {
+color:#f00;
+}
 
 #footer img {border:0;
 }
