--- a/wash.css
+++ b/wash.css
@@ -397,9 +397,9 @@ color:#f00;
 }
 
 
-/* Passage */
+/* Passage Study */
 
-#passage{
+#passagestudy{
 font-family:  Verdana, Arial, Helvetica, Sans-Serif;
 font-size: 1em;
 line-height: 1.4em;
@@ -407,22 +407,22 @@ margin: 0px 14em 0px 11.5em;
 padding: 0 0 0px 0;
 }
 
-#passage div{
+#passagestudy div{
 padding: 0px 0.5em 0px 0px;
 }
 
-#passage span.versenum{
+#passagestudy span.versenum{
 	font-size: 0.7 em;
 	padding: 0px 3px 0px 10px;
 	font-weight: bold;
 }
 
-#passage span.versenum a {
+#passagestudy span.versenum a {
 	text-decoration: none;
 	color:navy;
 }
 
-#passage span.versenum a:hover {
+#passagestudy span.versenum a:hover {
 	text-decoration: underline;
 	color:#ff0000;
 }
@@ -431,7 +431,7 @@ div.currentverse {
 	background-color: #eee;
 }
 
-#passage  ul {
+#passagestudy  ul {
 background: #eee;
 border-top: 1px solid #ccc;
 border-bottom: 1px solid #ccc;
@@ -440,7 +440,7 @@ padding: 0px 0px 0px 0px;
 text-indent: 0px;
 }
 
-#passage  ul li {
+#passagestudy  ul li {
 display: inline;
 list-style-type: none;
 line-height: 2em;
@@ -448,11 +448,11 @@ font-size: 1em;
 margin: 0px 1.1em 0px 0px;
 }
 
-#passage  ul li a {
+#passagestudy  ul li a {
 color:#000;
 }
 
-#passage  ul li a:hover {
+#passagestudy  ul li a:hover {
 color:#f00;
 }
 
