--- a/wash.css
+++ b/wash.css
@@ -40,7 +40,7 @@ margin: 0;
 padding: 0;
 }
 
-#navlist a:link, #navlist a:visited{
+#navlist a:link, #navlist a:visited {
 background: #E8EBF0;
 border: 1px solid #ccc;
 color: #666;
@@ -60,7 +60,7 @@ border-bottom: 1px solid #fff;
 color: #000;
 }
 
-#navlist a:hover { 
+#navlist a:hover {
 color: #ff0000;
 background: #C5D6EA;
 }
@@ -125,7 +125,7 @@ margin: 0px 0px 1em 0px;
 padding: 0px 0px 0px 0px;
 }
 
-##quicksearch form fieldset{
+#quicksearch form fieldset{
 border: 1px solid #ccc;
 padding: 3px;
 }
@@ -412,7 +412,7 @@ padding: 0px 0.5em 0px 0px;
 }
 
 #passagestudy span.versenum{
-	font-size: 0.7 em;
+	font-size: 0.7em;
 	padding: 0px 3px 0px 10px;
 	font-weight: bold;
 }
@@ -457,4 +457,11 @@ color:#f00;
 }
 
 #footer img {border:0;
+}
+
+
+/*  Unicode formatting  */
+span.unicode {
+	font-size:1.6em;
+	font-family: code2000, code2001, arial unicode ms, cyberbit, arial, palatino, gergia, sans-serif;
 }
