--- a/wash.css
+++ b/wash.css
@@ -40,7 +40,7 @@ margin: 0;
 padding: 0;
 }
 
-#navlist a:link, #navlist a:visited {
+#navlist a:link, #navlist a:visited{
 background: #E8EBF0;
 border: 1px solid #ccc;
 color: #666;
@@ -51,7 +51,6 @@ line-height: 14px;
 margin-right: 8px;
 padding: 2px 10px 2px 10px;
 text-decoration: none;
--moz-border-radius: .5em .3em 0 0;
 }
 
 #navlist a:link#current, #navlist a:visited#current{
@@ -60,10 +59,12 @@ border-bottom: 1px solid #fff;
 color: #000;
 }
 
-#navlist a:hover {
+#navlist a:hover { 
 color: #ff0000;
 background: #C5D6EA;
 }
+
+#navlist li#skip {display:none;}
 
 /* General - Site wide style */
 
@@ -86,7 +87,7 @@ border-top: 1px solid #ccc;
 #content-sub-1{
 width:12em;
 float:left;
-margin: 0px 1em 0px 0px;
+margin: 0px 0em 0px 0px;
 padding: 0px 0.5em 20px 0px;
 border-right: 1px solid #ccc;
 }
@@ -104,6 +105,10 @@ margin: 0px 0px 0px 0px;
 padding: 15px 15px 20px 15px;
 width:auto;
 }
+
+
+
+
 
 #footer{clear:both;
 margin: 0px 0px 0px 0px;
@@ -328,6 +333,13 @@ font-style: italic;
 #commentaries hr {display:none;}
 
 
+#welcome, #about, #help  {
+margin: 0px 14em 0px 11.5em;
+padding: 0px .5em 0px .5em;
+}
+
+
+
 /*   Search Results   */
 
 #searchresults {
@@ -408,21 +420,22 @@ padding: 0 0 0px 0;
 }
 
 #passagestudy div{
-padding: 0px 0.5em 0px 0px;
+	padding: 0px .5em 0px .5em;
 }
 
-#passagestudy span.versenum{
+ span.versenum{
 	font-size: 0.7em;
 	padding: 0px 3px 0px 10px;
 	font-weight: bold;
+
 }
 
-#passagestudy span.versenum a {
+ span.versenum a {
 	text-decoration: none;
 	color:navy;
 }
 
-#passagestudy span.versenum a:hover {
+ span.versenum a:hover {
 	text-decoration: underline;
 	color:#ff0000;
 }
@@ -456,12 +469,60 @@ color:#000;
 color:#f00;
 }
 
-#footer img {border:0;
+/* Parallel Display */
+
+#paralleldisplay {
+font-family:  Verdana, Arial, Helvetica, Sans-Serif;
+font-size: 1em;
+line-height: 1.4em;
+margin: 0px 14em 0px 11.5em;
+padding: 0 0 0px 0;
+}
+
+#paralleldisplay p {
+padding: 0px .5em 0px .5em;
 }
 
 
-/*  Unicode formatting  */
-span.unicode {
-	font-size:1.6em;
-	font-family: code2000, code2001, arial unicode ms, cyberbit, arial, palatino, gergia, sans-serif;
+#paralleldisplay  ul {
+background: #eee;
+border-top: 1px solid #ccc;
+border-bottom: 1px solid #ccc;
+margin: 0px 0px 5px 0px;
+padding: 0px 0px 0px 0px;
+text-indent: 0px;
+}
+
+#paralleldisplay  ul li {
+display: inline;
+list-style-type: none;
+line-height: 2em;
+font-size: 1em;
+margin: 0px 1.1em 0px 0px;
+}
+
+#paralleldisplay  ul li a {
+color:#000;
+}
+
+#paralleldisplay  ul li a:hover {
+color:#f00;
+}
+
+#paralleldisplay td {
+ vertical-align: top;
+}
+
+#paralleldisplay td {
+	padding: 0px .5em 0px .5em;
+}
+
+#paralleldisplay td.currentverse {
+	background-color: #eee;
+}
+
+
+
+
+#footer img {border:0;
 }
