--- a/wash.css
+++ b/wash.css
@@ -521,8 +521,11 @@ color:#f00;
 	background-color: #eee;
 }
 
-
-
-
 #footer img {border:0;
+}
+
+/* Unicode stuff */
+span.unicode {
+	font-family:code2000, code2001, arial unicode ms,bitstream cyberbit,arial,georgia,palatino,sans-serif;
+	font-size:1.5em;
 }
