--- a/wash.css
+++ b/wash.css
@@ -271,6 +271,67 @@ font-style: italic;
 
 #translations hr {display:none;}
 
+/*   Devotionals   */
+
+#devotionals {
+margin: 0px -0.5em 0px 0px;
+padding: 0px 0 0px 0px;
+}
+
+#devotionals ul, #devotionals li {
+list-style-type: none;
+}
+
+
+#devotionals ul {
+background: #E8EBF0;
+text-indent: 0em;
+padding: 0px;
+margin: 0px 0px 10px 0px;
+}
+
+#devotionals li{
+list-style: none;
+margin: 0;
+border-top: 1px solid #ccc;
+text-align: left;
+border-bottom: 1px solid #E8EBF0;
+}
+
+#devotionals li a{
+display: block;
+padding: 0.25em 0.5em 0.25em 0.75em;
+background: #E8EBF0;
+text-decoration: none;
+}
+
+#devotionals li a:link { color: #000; }
+#externallinks li a:visited { color: #000; }
+
+#devotionals li a:hover{
+border-color: #8EABCD;
+color: #f00;
+background: #C5D6EA;
+}
+
+#devotionals h3 {
+background: #C5D6EA;
+margin: 0px 0px 0px 0px;
+padding: 2px 0.5em 2px 0.5em;
+text-align: center;
+font-size: 1.1em;
+border-top: 2px solid #ccc;
+}
+
+#devotionals p {
+background: #C5D6EA;
+margin: 0px 0px 0px 0px;
+padding: 2px 0.5em 2px 0.5em;
+text-align: center;
+font-style: italic;
+}
+
+
 /*   Commentaries   */
 
 #commentaries {
@@ -333,7 +394,7 @@ font-style: italic;
 #commentaries hr {display:none;}
 
 
-#welcome, #about, #help  {
+#welcome, #about, #help, #preferences, #powersearch, #daily   {
 margin: 0px 14em 0px 11.5em;
 padding: 0px .5em 0px .5em;
 }
@@ -449,7 +510,7 @@ background: #eee;
 border-top: 1px solid #ccc;
 border-bottom: 1px solid #ccc;
 margin: 0px 0px 5px 0px;
-padding: 0px 0px 0px 0px;
+padding: 0px 0px 0px 1em;
 text-indent: 0px;
 }
 
@@ -489,7 +550,7 @@ background: #eee;
 border-top: 1px solid #ccc;
 border-bottom: 1px solid #ccc;
 margin: 0px 0px 5px 0px;
-padding: 0px 0px 0px 0px;
+padding: 0px 0px 0px 1em;
 text-indent: 0px;
 }
 
@@ -519,6 +580,11 @@ color:#f00;
 
 #paralleldisplay td.currentverse {
 	background-color: #eee;
+}
+
+
+.wordsOfJesus {
+color: #bb0000;
 }
 
 #footer img {border:0;
