--- a/wash.css
+++ b/wash.css
@@ -394,7 +394,7 @@ font-style: italic;
 #commentaries hr {display:none;}
 
 
-#welcome, #about, #help, #preferences, #powersearch, #daily   {
+#welcome, #about, #help, #preferences, #powersearch, #daily, #genbook   {
 margin: 0px 14em 0px 11.5em;
 padding: 0px .5em 0px .5em;
 }
