--- a/wash.css
+++ b/wash.css
@@ -3,6 +3,7 @@ color: #000000;
 background-color: #ffffff;
 font-size: 76%;
 margin: 0px 10px 0px 10px;
+font-family: "Lucida Grande", "Lucida Sans Unicode", verdana, lucida, arial, helvetica, sans-serif;
 }
 
 /* Mast Head */
@@ -11,10 +12,11 @@ margin: 0px 10px 0px 10px;
 background-image: url(images/OSIS1.jpg);
 background-position: right top;
 background-repeat: no-repeat;
+font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 }
 
 #header h1 {
-font-family: palatino, georgia, serif;
+font-family: georgia, palatino, Times New Roman, Times, Serif;
 font-weight: normal;
 font-size: 2.0em;
 line-height: 2.5em;
@@ -71,8 +73,14 @@ background: #C5D6EA;
 h2{
 margin: 12px 0px 3px 0px;
 padding: 5px 0em 3px .5em;
-font-family: palatino, georgia, serif;
+font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 font-size: 1.4em;
+}
+
+h3{
+font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+font-weight: bold;
+font-size: 1.0em;
 }
 
 
@@ -269,8 +277,8 @@ background: #C5D6EA;
 margin: 0px 0px 0px 0px;
 padding: 2px 0.5em 2px 0.5em;
 text-align: center;
-font-size: 1.1em;
 border-top: 2px solid #ccc;
+
 }
 
 #translations p {
@@ -331,7 +339,6 @@ background: #C5D6EA;
 margin: 0px 0px 0px 0px;
 padding: 2px 0.5em 2px 0.5em;
 text-align: center;
-font-size: 1.1em;
 border-top: 2px solid #ccc;
 }
 
@@ -390,7 +397,6 @@ background: #C5D6EA;
 margin: 0px 0px 0px 0px;
 padding: 2px 0.5em 2px 0.5em;
 text-align: center;
-font-size: 1.1em;
 border-top: 2px solid #ccc;
 }
 
@@ -451,7 +457,6 @@ background: #C5D6EA;
 margin: 0px 0px 0px 0px;
 padding: 2px 0.5em 2px 0.5em;
 text-align: center;
-font-size: 1.1em;
 border-top: 2px solid #ccc;
 }
 
@@ -545,7 +550,6 @@ color:#f00;
 /* Passage Study */
 
 #passagestudy{
-font-family:  Verdana, Arial, Helvetica, Sans-Serif;
 font-size: 1em;
 line-height: 1.4em;
 margin: 0px 14em 0px 11.5em;
@@ -605,7 +609,6 @@ color:#f00;
 /* Parallel Display */
 
 #paralleldisplay {
-font-family:  Verdana, Arial, Helvetica, Sans-Serif;
 font-size: 1em;
 line-height: 1.4em;
 margin: 0px 14em 0px 11.5em;
@@ -703,13 +706,9 @@ text-decoration:underline;
 color:#f00;
 }
 
-
 .wordsOfJesus {
 color: #bb0000;
 }
 
-
-
-
-
-
+#footer img {border:0;
+}
