--- a/wash.css
+++ b/wash.css
@@ -3,7 +3,6 @@ color: #000000;
 background-color: #ffffff;
 font-size: 76%;
 margin: 0px 10px 0px 10px;
-font-family: "Lucida Grande", "Lucida Sans Unicode", verdana, lucida, arial, helvetica, sans-serif;
 }
 
 /* Mast Head */
@@ -112,10 +111,8 @@ border-left: 1px solid #ccc;
 margin: 0px 0px 0px 0px;
 padding: 15px 15px 20px 15px;
 width:auto;
+font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 }
-
-
-
 
 
 #footer{clear:both;
@@ -710,5 +707,4 @@ color:#f00;
 color: #bb0000;
 }
 
-#footer img {border:0;
-}
+
