--- a/wash.css
+++ b/wash.css
@@ -89,6 +89,7 @@ font-size: 1.0em;
 margin: 5px 0px 0px 0px;
 padding: 0px 0px 0px 0px;
 border-top: 1px solid #ccc;
+clear:left;;
 }
 
 #content-sub-1{
