--- a/wash.css
+++ b/wash.css
@@ -31,7 +31,6 @@ border-bottom: 1px solid #ccc;
 margin: 0;
 padding-bottom: 19px;
 padding-left: 10px;
-font-family: palatino, georgia, serif;
 }
 
 #navlist ul, #navlist li{
@@ -46,11 +45,12 @@ background: #E8EBF0;
 border: 1px solid #ccc;
 color: #666;
 float: left;
-font-size: small;
+font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
+font-size: 1.0em;
 font-weight: normal;
-line-height: 14px;
+line-height: 1.4em;
 margin-right: 8px;
-padding: 2px 10px 2px 10px;
+padding: 1px 5px 0px 5px;
 text-decoration: none;
 }
 
@@ -89,7 +89,7 @@ font-size: 1.0em;
 margin: 5px 0px 0px 0px;
 padding: 0px 0px 0px 0px;
 border-top: 1px solid #ccc;
-clear:left;;
+clear:left;
 }
 
 #content-sub-1{
