--- a/print.css
+++ b/print.css
@@ -63,7 +63,7 @@ padding: 0px 0px 0px 0px;
 }
 
 
-#welcome, #about, #help, #preferences, #passagestudy, #powersearch, #daily, #genbook   {
+#welcome, #about, #help, #preferences, #passagestudy, #powersearch, #paralleldisplay, #daily, #genbook   {
 margin: 0;
 padding: 0;
 font-family: Times New Roman, Times, Serif;
