--- a/wash.css
+++ b/wash.css
@@ -1,15 +1,16 @@
 body{
 color: #000000;
-background-color: #ffffff;
+background-color: #fff;
 font-size: 76%;
-margin: 0px 10px 0px 10px;
+margin: 7px 10px 0px 10px;
 }
 
 /* Mast Head */
 
 #header{
-background-image: url(images/OSIS1.jpg);
-background-position: right top;
+background-color:#FFF;
+background-position: left top;
+background-image: url(images/osislogo.png);
 background-repeat: no-repeat;
 font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 }
@@ -18,25 +19,26 @@ font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 font-family: georgia, palatino, Times New Roman, Times, Serif;
 font-weight: normal;
 font-size: 2.0em;
-line-height: 2.5em;
+line-height: 2.0em;
 text-transform: uppercase;
 padding: 0;
-margin: 0px 0px 0px 0px;
+margin: 0px 0px 0px 70px;
 }
 
 /* Main Navigation */
 
 #navlist{
 border-bottom: 1px solid #ccc;
-margin: 0;
+margin: 0px;
 padding-bottom: 19px;
-padding-left: 10px;
+padding-left: 70px;
+
 }
 
 #navlist ul, #navlist li{
 display: inline;
 list-style-type: none;
-margin: 0;
+margin: 0px 0px 0px 0px;
 padding: 0;
 }
 
@@ -90,6 +92,7 @@ margin: 5px 0px 0px 0px;
 padding: 0px 0px 0px 0px;
 border-top: 1px solid #ccc;
 clear:left;
+background-color:#FFF;
 }
 
 #content-sub-1{
@@ -116,13 +119,16 @@ font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 }
 
 
-#footer{clear:both;
+#footer{
+clear:both;
 margin: 0px 0px 0px 0px;
 border-top: 1px solid #ccc;
+text-align: center;
 }
 
 #footer img {
 border:0;
+margin: 0px 20px 0px 20px;
 }
 
 
@@ -306,8 +312,6 @@ background: #E8EBF0;
 text-indent: 0em;
 padding: 0px;
 margin: 0px 0px 0px 0px;
-	height: 170px;
-	overflow: auto;
 }
 
 #devotionals li{
