--- a/wash.css
+++ b/wash.css
@@ -79,6 +79,8 @@ font-size: 1.4em;
 }
 
 h3{
+margin: 12px 0px 3px 0px;
+padding: 5px 0em 3px .5em;
 font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 font-weight: bold;
 font-size: 1.0em;
