--- a/wash.css
+++ b/wash.css
@@ -72,13 +72,15 @@ background: #C5D6EA;
 /* General - Site wide style */
 
 h2{
-margin: 12px 0px 3px 0px;
-padding: 5px 0em 3px .5em;
+margin: 1em .5em 0 .5em;
 font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 font-size: 1.4em;
 }
 
+
+
 h3{
+margin: 1em .5em .5em .5em;
 font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 font-weight: bold;
 font-size: 1.0em;
