pushed h3 over a little more than the h2.

--- a/wash.css
+++ b/wash.css
@@ -80,7 +80,7 @@ font-size: 1.4em;
 
 
 h3{
-margin: 1em .5em .5em .5em;
+margin: 1em .5em .5em 1em;
 font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 font-weight: bold;
 font-size: 1.0em;
