--- a/parchment.css
+++ b/parchment.css
@@ -732,13 +732,13 @@ color: #bb0000;
 
 #contentTray0{
   width: 100%;
-  background-image: url("./imgs/page_bg.jpg");
+  background-image: url("./images/parchment/page_bg.jpg");
 }
 
 #contentTray1{
   width: 100%;
   background-color: transparent;
-  background-image: url("./imgs/page_bg_l.gif");
+  background-image: url("./images/parchment/page_bg_l.gif");
   background-repeat: repeat-y;
   background-position: top left;
 }
@@ -746,7 +746,7 @@ color: #bb0000;
 #contentTray2{
   width: 100%;
   background-color: transparent;
-  background-image: url("./imgs/page_bg_r.gif");
+  background-image: url("./images/parchment/page_bg_r.gif");
   background-repeat: repeat-y;
   background-position: top right;
 }
@@ -800,7 +800,7 @@ color: #bb0000;
   width: 100%;
   height: 16px;
   background-color: transparent;
-  background-image: url("./imgs/page_bg_t.gif");
+  background-image: url("./images/parchment/page_bg_t.gif");
   background-repeat: repeat-x;
   background-position: top center;
 }
@@ -809,7 +809,7 @@ color: #bb0000;
   width: 100%;
   height: 16px;
   background-color: transparent;
-  background-image: url("./imgs/page_bg_b.gif");
+  background-image: url("./images/parchment/page_bg_b.gif");
   background-repeat: repeat-x;
   background-position: top center;
 }
@@ -819,7 +819,7 @@ color: #bb0000;
   top: 0;
   width: 100%;
   height: 100px;
-  background-image: url("./imgs/page_bg_t_.gif");
+  background-image: url("./images/parchment/page_bg_t_.gif");
   background-position: top center;
   vertical-align: bottom;
 }
@@ -829,7 +829,7 @@ color: #bb0000;
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./imgs/page_bg_t_.gif");
+  background-image: url("./images/parchment/page_bg_t_.gif");
   background-position: top center;
   vertical-align: bottom;
 }
@@ -841,7 +841,7 @@ color: #bb0000;
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./imgs/page_bg_t_.gif");
+  background-image: url("./images/parchment/page_bg_t_.gif");
   background-position: top center;
   vertical-align: bottom;
 }
@@ -850,7 +850,7 @@ color: #bb0000;
   position: relative static;
   width: 100%;
   height: 16px;
-  background-image: url("./imgs/page_bg_b.gif");
+  background-image: url("./images/parchment/page_bg_b.gif");
   background-repeat: repeat-x;
   background-position: bottom center;
 }
