--- a/parchment.css
+++ b/parchment.css
@@ -123,13 +123,15 @@ font-family: "Trebuchet MS", verdana, lucida, arial, helvetica, sans-serif;
 }
 
 
-#footer{clear:both;
+#footer{
+clear:both;
 margin: 0px 0px 0px 0px;
-border-top: 1px solid #222;
+text-align: center;
 }
 
 #footer img {
 border:0;
+margin: 0px 20px 0px 20px;
 }
 
 
