--- a/parchment.css
+++ b/parchment.css
@@ -964,10 +964,10 @@ color: #bb0000;
 {background-color: #C9CEA8; width: 100%; height: 100px; margin: 0px; border-bottom: 4px solid #999; background-image: url("/img/topback.jpg"); background-repeat: repeat-x; background-position: top left;}
 
 
-#titleText {
+#header h1 {
   display: none;
 }
-#titleBanner {
+#header {
   width: 100%;
   height: 135px;
   margin: 9px 9px 9px 9px;
